fix alignment issues on comment cards

--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -16,14 +16,15 @@
   /* gap: 5px; */
 }
 
-.commentCardContainer{
+.commentCardContainer {
   display: flex;
-  flex-direction: row; 
-  flex-wrap: wrap; 
+  flex-direction: row;
+  flex-wrap: wrap;
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
   justify-content: center;
   align-items: center;
-  gap: 35px;
+  gap: 45px;
+  margin-left: 30px;
 }
